--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="container mx-auto">
+
+    <!--Navbar-->
+    <nav class="flex justify-between items center">
+        <!--Left side-->
+        <a href="/">Movie Vault</a>
+
+        <!--Right Side-->
+        <div id="right-side-nav" class="flex items-center space-x-5">
+            <a href="login.html">Log In</a>
+            <a href="register.html">Register</a>
+        </div>
+    </nav>
     
     <div>Home Page</div>
 
