single item page details

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="popular-wrapper" class="flex space-x-3"></div>
     </div>
 
-    <div class="h-5 w-5 h-[50px] w-[50px]"></div>
+    <div class="hidden h-5 w-5 h-[50px] w-[50px] bg-blue-300"></div>
     
     <script type="module" src="js/script.js"></script>
 </body>
