--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
         <!--Right Side-->
         <div class="flex items-center space-x-5">
-            <a href="login.html">Log In</a>
+            <a href="login.html" class="bg-black text-white">Log In</a>
             <a href="register.html">Register</a>
         </div>
     </nav>
