--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
         <!--Right Side-->
         <div class="flex items-center space-x-5">
             <a href="login.html">Log In</a>
-            <a href="register.html">Register</a>
+            <a href="register.html" class="bg-black text-white">Register</a>
         </div>
     </nav>
 
