--- a/movie.html
+++ b/movie.html
@@ -12,7 +12,7 @@
         <!--Left side-->
         <div class="flex items-center space-x-3">
             <a href="/" class="font-bold text-xl">Movie Vault</a>
-            <a href="movie.html">Movies</a>
+            <a href="movie.html" class="bg-black text-white">Movies</a>
             <a href="tv.html">TV Shows</a>
             <a href="person.html">People</a>
         </div>
