--- a/tv.html
+++ b/tv.html
@@ -13,7 +13,7 @@
         <div class="flex items-center space-x-3">
             <a href="/" class="font-bold text-xl">Movie Vault</a>
             <a href="movie.html">Movies</a>
-            <a href="tv.html">TV Shows</a>
+            <a href="tv.html" class="bg-black text-white">TV Shows</a>
             <a href="person.html">People</a>
         </div>
 
