--- a/tv-show-details.html
+++ b/tv-show-details.html
@@ -35,6 +35,11 @@
         </div>
     </div>
 
+    <!--Backend Section-->
+    <div class="">
+        <button id="favorite-btn" class="bg-red-400"></button>
+    </div> 
+
     <!--Cast Section-->
     <div class="flex flex-col">
         <div class="text-2xl font-bold">Cast</div>
