--- a/person-details.html
+++ b/person-details.html
@@ -33,6 +33,11 @@
         </div>
     </div>
 
+    <!--Backend Section-->
+    <div class="">
+        <button id="favorite-btn" class="bg-red-400"></button>
+    </div> 
+
     <!--Credits Section-->
     <div class="flex flex-col">
         <div class="text-2xl font-bold">Credits</div>
