--- a/login.html
+++ b/login.html
@@ -39,5 +39,6 @@
     </div>
 
     <script type="module" src="./js/login.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
