--- a/movie-details.html
+++ b/movie-details.html
@@ -52,5 +52,6 @@
     <div class="hidden h-[100px] w-[100px] border"></div>
     
     <script type="module" src="js/movieDetails.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
