--- a/person.html
+++ b/person.html
@@ -35,5 +35,6 @@
     </div>
 
     <script type="module" src="./js/person.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
