--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
     <div class="hidden h-5 w-5 h-[50px] w-[50px] bg-blue-300"></div>
     
     <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
