--- a/movie.html
+++ b/movie.html
@@ -55,5 +55,6 @@
     </div>
 
     <script type="module" src="./js/movie.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
