--- a/person-details.html
+++ b/person-details.html
@@ -62,5 +62,6 @@
     <div class="hidden h-[100px] w-[100px] border"></div>
     
     <script type="module" src="js/personDetails.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
