--- a/register.html
+++ b/register.html
@@ -42,5 +42,6 @@
     </div>
 
     <script type="module" src="./js/register.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
