--- a/search-results.html
+++ b/search-results.html
@@ -51,5 +51,6 @@
     
 
     <script type="module" src="js/search-results.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
