--- a/tv-show-details.html
+++ b/tv-show-details.html
@@ -51,5 +51,6 @@
     <div class="hidden h-[100px] w-[100px] border"></div>
     
     <script type="module" src="js/tvShowDetails.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
