--- a/tv.html
+++ b/tv.html
@@ -55,5 +55,6 @@
     </div>
 
     <script type="module" src="./js/tv.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
