--- a/movie-details.html
+++ b/movie-details.html
@@ -39,6 +39,11 @@
     <!--Backend Section-->
     <div class="">
         <button id="favorite-btn" class="bg-red-400"></button>
+
+        <div>Add to List</div>
+        <div id="user-list-container" class="flex flex-col w-[400px]">
+
+        </div>  
     </div> 
 
     <!--Cast Section-->
@@ -49,7 +54,7 @@
         </div>
     </div>
 
-    <div class="hidden h-[100px] w-[100px] border"></div>
+    <div class="hidden h-[100px] w-[100px] border w-[400px]"></div>
     
     <script type="module" src="js/movieDetails.js"></script>
     <script type="module" src="js/navbar.js"></script>
