--- a/person-details.html
+++ b/person-details.html
@@ -36,6 +36,11 @@
     <!--Backend Section-->
     <div class="">
         <button id="favorite-btn" class="bg-red-400"></button>
+
+        <div>Add to List</div>
+        <div id="user-list-container" class="flex flex-col w-[400px]">
+
+        </div> 
     </div> 
 
     <!--Credits Section-->
