--- a/create-list.html
+++ b/create-list.html
@@ -47,6 +47,7 @@
 
     <div class="hidden "></div>
     
+    <script type="module" src="js/protect.js"></script>
     <script type="module" src="js/createList.js"></script>
     <script type="module" src="js/navbar.js"></script>
 </body>
