--- a/list.html
+++ b/list.html
@@ -34,6 +34,7 @@
     <div class="font-bold">List Items</div>
     <div id="list-items"></div>
     
+    <script type="module" src="js/protect.js"></script>
     <script type="module" src="js/list.js"></script>
     <script type="module" src="js/navbar.js"></script>
 </body>
