--- a/update-list.html
+++ b/update-list.html
@@ -25,7 +25,8 @@
     </nav>
 
     <!--Form-->
-    <div class="flex flex-1 items-center justify-center">
+    <div class="flex flex-1 flex-col items-center justify-center">
+        <a id="go-back-button"></a>
         <form id="update-list-form" action="">
             <div class="flex flex-col space-y-3">
                 <div>Update List</div>
@@ -44,6 +45,7 @@
         </form>
     </div>
 
+    <script type="module" src="js/protect.js"></script>
     <script type="module" src="js/updateList.js"></script>
 </body>
 </html>
