--- a/profile.html
+++ b/profile.html
@@ -30,6 +30,7 @@
 
     </div>
     
+    <script type="module" src="js/protect.js"></script>
     <script type="module" src="js/profile.js"></script>
     <script type="module" src="js/navbar.js"></script>
 </body>
