--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!--Trending section-->
     <div class="flex flex-col">
-        <div class="flex items-center space-x-3">
+        <div class="flex flex-wrap items-center space-x-3">
             <div class="text-xl font-bold">Trending</div>
 
             <div class="flex items-center border border-black rounded-full">
@@ -61,7 +61,7 @@
         <div id="popular-wrapper" class="flex space-x-3"></div>
     </div>
 
-    <div class="hidden h-5 w-5 h-[50px] w-[50px] bg-blue-300"></div>
+    <div class="hidden h-5 w-5 h-[50px] w-[50px] bg-blue-300 h-[100px] w-[100px]"></div>
     
     <script type="module" src="js/script.js"></script>
     <script type="module" src="js/navbar.js"></script>
