--- a/delete-profile.html
+++ b/delete-profile.html
@@ -6,7 +6,7 @@
     <title>Movie Vault</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body class="container mx-auto">
+<body class="flex flex-col container mx-auto h-[100vh]">
 
     <!--Navbar-->
     <nav class="flex justify-between items center">
@@ -25,33 +25,13 @@
         </div>
     </nav>
 
-    <div class="text-center text-xl font-bold">Profile</div>
-    <div id="username" class="text-center text-blue-500"></div>
-    <div class="flex justify-center gap-x-3">
-        <a href="update-profile.html" class="bg-green-300">Update Profile</a>
-        <a href="delete-profile.html" class="bg-red-300">Delete Profile</a>
-    </div>
-
-    <div class="flex">
-        <div class="w-1/4">
-            <div class="text-lg font-bold">Lists</div>
-            <div class="flex flex-col" id="user-lists-container">
-
-            </div>
-        </div>
-
-        <div class="w-3/4">
-            <div class="text-lg font-bold">Favorites</div>
-            <div class="flex flex-col" id="favorites-container">
-                
-            </div>
-        </div>
-    </div>
+    <div className='text-center text-3xl'>Are you sure you want to delete your account?</div>
+    <button id="delete-btn">Confirm Delete</button>
 
     <div class="hidden"></div>
     
     <script type="module" src="js/protect.js"></script>
-    <script type="module" src="js/profile.js"></script>
+    <script type="module" src="js/deleteProfile.js"></script>
     <script type="module" src="js/navbar.js"></script>
 </body>
 </html>
