profile page filtering

--- a/list.html
+++ b/list.html
@@ -30,6 +30,7 @@
     <div id="description"></div>
 
     <a id="update-list-link" href="" class="bg-blue-300 p-1">Update List Details</a>
+    <button id="delete-list-btn" class="bg-red-300 p-1">Delete List</button>
     
     <div class="font-bold">List Items</div>
     <div id="list-items"></div>
