--- a/profile.html
+++ b/profile.html
@@ -42,6 +42,18 @@
 
         <div class="w-3/4">
             <div class="text-lg font-bold">Favorites</div>
+            <div class="flex gap-x-3">
+                <div class="flex">Movies:<div id="movie-count"></div></div>
+                <div class="flex">TV Shows:<div id="tv-count"></div></div>
+                <div class="flex">People:<div id="person-count"></div></div>
+            </div>
+
+            <div class="flex flex-wrap gap-2 my-2" id="filter-buttons-container">
+                <button id="filter-btn" value="Movie" class="bg-blue-300">Movies</button>
+                <button id="filter-btn" value="TV" class="bg-blue-300">TV Shows</button>
+                <button id="filter-btn" value="Person" class="bg-blue-300">People</button>
+            </div>
+
             <div class="flex flex-col" id="favorites-container">
                 
             </div>
