--- a/login.html
+++ b/login.html
@@ -38,23 +38,31 @@
         <button id="close-sidebar" class="flex items-center gap-x-3 text-white text-xl pt-5"><i class="fa-solid fa-circle-xmark"></i><span class="text-sm">Close</span></button>
     </div>
 
-    <div class="flex flex-1 items-center justify-center">
-        <form id="login-form" action="">
-            <div class="flex flex-col space-y-3">
-                <div>Log In</div>
+    <div class="flex flex-1 md:items-center justify-center mt-3 md:mt-0">
+        <div class="md:border border-purple-900 px-8 md:p-14 w-full md:w-[500px]">
+            <form id="login-form" action="">
+                <div class="flex flex-col space-y-4 md:space-y-5">
+                    <div class="text-4xl font-bold ">Log In</div>
 
-                <!--Error message-->
-                <div id="error-message" class="bg-red-400"></div>
+                    <!--Error message-->
+                    <div id="error-message" class='hidden border-2 border-red-800 bg-red-300 p-1 px-2 w-fit text-red-600'></div>
 
-                <label for="username">Username:</label>
-                <input type="text" id="username" placeholder="Enter your username" name="username" required class="border">
+                    <div class="flex flex-col">
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" placeholder="Enter your username" name="username" required class="border border-purple-900 rounded-md p-3 focus:outline-none">
+                    </div>
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Enter your password" name="password" required class="border">
+                    <div class="flex flex-col">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" placeholder="Enter your password" name="password" required class="border border-purple-900 rounded-md p-3 focus:outline-none">
+                    </div>
 
-                <button type="submit" class="bg-blue-500">Log In</button>
-            </div>
-        </form>
+                    <button type="submit" class="bg-purple-700 hover:bg-purple-600 py-2 text-white rounded-lg font-semibold text-lg">Log In</button>
+
+                    <div>Don't have an account? <a href="register.html" class="text-blue-500 hover:underline">Register</a></div>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script type="module" src="./js/login.js"></script>
