--- a/update-list.html
+++ b/update-list.html
@@ -38,24 +38,31 @@
     </div>
 
     <!--Form-->
-    <div class="flex flex-1 flex-col items-center justify-center">
-        <a id="go-back-button"></a>
-        <form id="update-list-form" action="">
-            <div class="flex flex-col space-y-3">
-                <div>Update List</div>
+    <div class="flex flex-1 md:items-center justify-center mt-3 md:mt-0">
+        <div class="md:border border-purple-900 px-8 md:p-14 w-full md:w-[500px]">
+            <form id="update-list-form" action="">
+                <div class="flex flex-col space-y-4 md:space-y-5">
+                    <div class="text-4xl font-bold">Update List</div>
 
-                <!--Error message-->
-                <div id="error-message" class="bg-red-400"></div>
+                    <!--Error message-->
+                    <div id="error-message" class='hidden border-2 border-red-800 bg-red-300 p-1 px-2 w-fit text-red-600'></div>
 
-                <label for="name">Name:</label>
-                <input type="text" id="name" placeholder="Enter list name" name="name" required class="border">
+                    <div class="flex flex-col">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" placeholder="Enter list name" name="name" required class="border border-purple-900 rounded-md p-3 focus:outline-none">
+                        <div class="text-xs">50 character limit</div>
+                    </div>
 
-                <label for="description">Description:</label>
-                <input type="text" id="description" placeholder="Enter list description" name="description" class="border">
+                    <div class="flex flex-col">
+                        <label for="description">Description:</label>
+                        <input type="text" id="description" placeholder="Enter list description" name="description" class="border border-purple-900 rounded-md p-3 focus:outline-none">
+                        <div class="text-xs">(Optional)</div>
+                    </div>
 
-                <button type="submit" class="bg-blue-500">Update</button>
-            </div>
-        </form>
+                    <button type="submit" class="bg-purple-700 hover:bg-purple-600 py-2 text-white rounded-lg font-semibold text-lg">Update</button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script type="module" src="js/protect.js"></script>
