--- a/person.html
+++ b/person.html
@@ -38,12 +38,13 @@
     </div>
 
     <!--Results container-->
-    <div id="results-container" class="flex flex-wrap gap-y-3">
+    <div class="font-bold text-3xl pl-2 md:pl-0">Popular People</div>
+    <div id="results-container" class="flex gap-3 flex-wrap justify-around md:justify-start mt-3">
         
     </div>
 
     <!--Show more button-->
-    <div id="show-more-btn">
+    <div class="flex items-center justify-center md:justify-start space-x-2 my-8" id="show-more-btn">
 
     </div>
 
