--- a/tv-show-details.html
+++ b/tv-show-details.html
@@ -68,7 +68,7 @@
     <!--Cast Section-->
     <div class="flex flex-col ml-2 md:ml-0 mt-5">
         <div class="text-2xl font-bold">Cast</div>
-        <div id="cast-card-container" class="flex overflow-x-auto gap-x-3 pb-1">
+        <div id="cast-card-container" class="flex overflow-x-auto custom-scrollbar gap-x-3 pb-1">
             
         </div>
 
@@ -78,7 +78,7 @@
     <!--Credits Section-->
     <div class="flex flex-col ml-2 md:ml-0 mt-5">
         <div class="text-2xl font-bold">Credits</div>
-        <div id="credits-card-container" class="flex overflow-x-auto gap-x-3 pb-1">
+        <div id="credits-card-container" class="flex overflow-x-auto custom-scrollbar gap-x-3 pb-1">
             
         </div>
 
