--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <!--Loading-->
-    <div id="awake" class="bg-black h-[100vh] text-white flex items-center justify-center">Loading</div>
+    <div id="awake" class="h-[100vh] w-full fixed top-0 left-0 z-50 bg-black bg-opacity-50 backdrop-blur-sm text-white flex items-center justify-center"></div>
 
-    <div class="container mx-auto">
+    <div id="main-div" class="container mx-auto">
 
         <!--Desktop Navbar-->
         <nav class="hidden md:flex justify-between items-center h-[60px] px-2 md:px-0 font-semibold">
@@ -46,13 +46,13 @@
         </div>
 
         <!--Header backdrop-->
-        <div class="relative mx-auto w-full h-[350px] md:h-[400px] z-10">
+        <div class="relative mx-auto w-full h-[350px] md:h-[500px] z-10">
             <img id="header-backdrop" src="" alt="backdrop" class="absolute inset-0 w-full h-full object-fill">
             <div class="absolute inset-0 w-full h-full bg-purple-900 opacity-60"></div>
             <form id="home-search-form" action="" class="absolute inset-0 flex flex-col items-center justify-center px-3 md:px-0">
                 <div class="text-white w-[80%] text-4xl font-bold text-center">Millions of movies, TV shows and people to discover. Explore now.</div>
-                <div class="flex items-center rounded-3xl bg-white text-black w-full md:w-[80%] mt-3">
-                    <input type="text" class="w-full h-full rounded-l-3xl pl-3 outline-none" placeholder="Search for a movie, tv show, person..." required/>
+                <div class="flex items-center rounded-3xl bg-white text-black w-[70%] md:w-[40%] mt-3 transition-all duration-300 focus-within:w-full md:focus-within:w-[60%] focus-within:shadow-xl">
+                    <input id="main-search-bar" type="text" class="w-full h-full rounded-l-3xl pl-3 outline-none" placeholder="Search..." required/>
                     <button type="submit" class="bg-yellow-500 text-white font-semibold py-3 px-4 rounded-3xl">Search</button>
                 </div>
             </form>
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div id="trending-wrapper" class="flex overflow-x-auto gap-x-3 pb-1"></div>
+            <div id="trending-wrapper" class="flex overflow-x-auto gap-x-3 pb-1 custom-scrollbar"></div>
         </div>
 
         <!--Popular section-->
@@ -84,7 +84,7 @@
                 </div>
             </div>
 
-            <div id="popular-wrapper" class="flex overflow-x-auto gap-x-3 pb-1"></div>
+            <div id="popular-wrapper" class="flex overflow-x-auto gap-x-3 pb-1 custom-scrollbar"></div>
         </div>
 
         <div class="hidden flex-shrink-0 h-[305px] top-2 right-[-100px] group-hover:right-0 overflow-x-hidden flex-grow text-gray-700 h-5 w-5 h-[50px] w-[50px] bg-blue-300 h-[100px] w-[100px] border-b border-white h-[1px] bg-white h-[225px] w-[150px] rounded-lg rounded-t-lg line-clamp-2 absolute right-[-100%] top-1/2 transform -translate-y-1/2 transition-all duration-300 group-hover:right-2"></div>
@@ -92,6 +92,7 @@
     
     <script type="module" src="js/script.js"></script>
     <script type="module" src="js/navbar.js"></script>
+    <script type="module" src="js/loading-spinner.js"></script>
     <script src="https://kit.fontawesome.com/d1384d0569.js" crossorigin="anonymous"></script>
 </body>
 </html>
